--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
 
+  <!-- FONT AWESOME -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -26,6 +29,7 @@
     .attribution {
       font-size: 11px;
       text-align: center;
+      margin-bottom: 0;
     }
 
     .attribution a {
@@ -37,7 +41,8 @@
 <body>
 
   <section id="title">
-    <h2>A history of everything you copy</h2>
+    <a href="#title"><img src="images/logo.svg" alt=""></a>
+    <h1>A history of everything you copy</h1>
 
     <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
 
@@ -46,45 +51,81 @@
   </section>
 
   <section id="snippets">
-    <h3>Keep track of your snippets</h3>
+    <div class="container-fluid snip-cont">
+      <div class="row snip_row1">
+        <h3>Keep track of your snippets</h3>
+        <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+      </div>
+      <div class="row snip_row2">
+        <div class="col-lg-6">
+          <img src="images/image-computer.png" alt="An Image of a Computer">
+        </div>
+        <div class="col-lg-6">
+          <h4>Quick Search</h4>
+          <p>Easily search your snippets by content, category, web address, application, and more.</p>
 
-    <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+          <h4>iCloud Sync</h4>
+          <p>Instantly saves and syncs snippets across all your devices.</p>
 
-    <h4>Quick Search</h4>
-
-    <p>Easily search your snippets by content, category, web address, application, and more.</p>
-
-    <h4>iCloud Sync</h4>
-
-    <p>Instantly saves and syncs snippets across all your devices.</p>
-
-    <h4>Complete History</h4>
-
-    <p>Retrieve any snippets from the first moment you started using the app.</p>
+          <h4>Complete History</h4>
+          <p>Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="clipboard">
-    <h3>Access Clipboard anywhere</h3>
-
-    <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+    <div class="container-fluid clip-cont">
+      <h3>Access Clipboard anywhere</h3>
+      <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+      <img src="images/image-devices.png" alt="An Image containing a Mobile and a Desktop">
+    </div>
   </section>
 
   <section id="workflow">
     <h3>Supercharge your workflow</h3>
-
     <p>We’ve got the tools to boost your productivity.</p>
 
-    <h4>Create blacklists</h4>
+    <div class="container-fluid">
 
-    <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+      <div class="row workflow_row1">
+        <div class="col-lg-4">
+          <img src="images/icon-blacklist.svg" alt="A Blacklist icon">
+          <h4>Create blacklists</h4>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <div class="col-lg-4">
+          <img src="images/icon-text.svg" alt="A Text icon">
+          <h4>Plain text snippets</h4>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <div class="col-lg-4">
+          <img src="images/icon-preview.svg" alt="A Preview icon">
+          <h4>Sneak preview</h4>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
 
-    <h4>Plain text snippets</h4>
+      <div class="row workflow_row2">
+        <div class="col-lg-2 col-md-6">
+          <img src="images/logo-google.png" alt="An image containing Google Logo">
+        </div>
+        <div class="col-lg-2 col-md-6">
+          <img src="images/logo-ibm.png" alt="An image containing IBM Logo">
+        </div>
+        <div class="col-lg-2 col-md-4">
+          <img src="images/logo-microsoft.png" alt="An image containing Microsoft Logo">
+        </div>
+        <div class="col-lg-2 col-md-4">
+          <img src="images/logo-hp.png" alt="An image containing Hewlett Packard Logo">
+        </div>
+        <div class="col-lg-2 col-md-4">
+          <img src="images/logo-vector-graphics.png" alt="An image containing Vector Graphics Logo">
+        </div>
+      </div>
 
-    <p>Remove unwanted formatting from copied text for a consistent look.</p>
+    </div>
 
-    <h4>Sneak preview</h4>
-
-    <p>Quick preview of all snippets on your Clipboard for easy access.</p>
   </section>
 
   <section id="download">
@@ -96,18 +137,32 @@
     <button class="btn btn-lg Mac-btn" type="button" name="button">Download for Mac</button>
   </section>
 
-  <footer>
-    FAQs
-    Contact Us
-    Privacy Policy
-    Press Kit
-    Install Guide
+  <section id="footer">
+    <div class="container-fluid">
+      <div class="query-logo">
+        <a href="#title"><img src="images/logo.svg" alt=""></a>
+      </div>
+      <div class="query-links">
+        <ul>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Press Kit</a></li>
+          <li><a href="#">Install Guide</a></li>
+        </ul>
+      </div>
+      <div class="query-icons">
+        <a href=""><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+        <a href=""><i class="fab fa-instagram fa-2x"></i></i></a>
+      </div>
+    </div>
 
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Harshit Soni</a>.
     </p>
-  </footer>
+  </section>
 </body>
 
 </html>
