--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
       </div>
       <div class="query-links">
         <ul>
-          <li><a href="#">FAQs</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Press Kit</a></li>
-          <li><a href="#">Install Guide</a></li>
+          <li><a href="#footer">FAQs</a></li>
+          <li><a href="#footer">Contact Us</a></li>
+          <li><a href="#footer">Privacy Policy</a></li>
+          <li><a href="#footer">Press Kit</a></li>
+          <li><a href="#footer">Install Guide</a></li>
         </ul>
       </div>
       <div class="query-icons">
-        <a href=""><i class="fab fa-facebook-square fa-2x"></i></a>
-        <a href=""><i class="fab fa-twitter fa-2x"></i></a>
-        <a href=""><i class="fab fa-instagram fa-2x"></i></i></a>
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="https://twitter.com/"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x"></i></i></a>
       </div>
     </div>
 
