--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <button class="btn btn-lg Mac-btn" type="button" name="button">Download for Mac</button>
   </section>
 
-  <section id="footer">
+  <div id="footer">
     <div class="container-fluid">
       <div class="query-logo">
         <a href="#title"><img src="images/logo.svg" alt=""></a>
@@ -152,9 +152,9 @@
         </ul>
       </div>
       <div class="query-icons">
-        <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2x"></i></a>
-        <a href="https://twitter.com/"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x"></i></i></a>
+        <a href="https://www.facebook.com/"><span class="sr-only">Facebook-icon</span><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="https://twitter.com/"><span class="sr-only">Twitter-icon</span><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="https://www.instagram.com/"><span class="sr-only">Instagram-icon</span><i class="fab fa-instagram fa-2x"></i></i></a>
       </div>
     </div>
 
@@ -162,7 +162,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Harshit Soni</a>.
     </p>
-  </section>
+  </div>
 </body>
 
 </html>
