--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <button class="btn btn-lg Mac-btn" type="button" name="button">Download for Mac</button>
   </section>
 
-  <div id="footer">
+  <footer>
     <div class="container-fluid">
       <div class="query-logo">
         <a href="#title"><img src="images/logo.svg" alt=""></a>
@@ -162,7 +162,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Harshit Soni</a>.
     </p>
-  </div>
+  </footer>
 </body>
 
 </html>
