--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 
   <section id="title">
-    <a href="#title"><img src="images/logo.svg" alt=""></a>
+    <a href="#title"><img src="images/logo.svg" alt="Our Page Logo"></a>
     <h1>A history of everything you copy</h1>
 
     <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
@@ -140,7 +140,7 @@
   <footer>
     <div class="container-fluid">
       <div class="query-logo">
-        <a href="#title"><img src="images/logo.svg" alt=""></a>
+        <a href="#title"><img src="images/logo.svg" alt="Our Page Logo"></a>
       </div>
       <div class="query-links">
         <ul>
