--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
       </div>
       <div class="query-links">
         <ul>
-          <li><a href="#footer">FAQs</a></li>
-          <li><a href="#footer">Contact Us</a></li>
-          <li><a href="#footer">Privacy Policy</a></li>
-          <li><a href="#footer">Press Kit</a></li>
-          <li><a href="#footer">Install Guide</a></li>
+          <li><a href="footer">FAQs</a></li>
+          <li><a href="footer">Contact Us</a></li>
+          <li><a href="footer">Privacy Policy</a></li>
+          <li><a href="footer">Press Kit</a></li>
+          <li><a href="footer">Install Guide</a></li>
         </ul>
       </div>
       <div class="query-icons">
